fix(shs-6439): fix spacing when accordions are in a collection

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/objects/_layouts.row.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/objects/_layouts.row.scss
@@ -148,3 +148,7 @@
   ) {
   margin-block-end: hb-calculate-rems(16px);
 }
+
+.field-hs-collection-items > .ptype-hs-accordion details {
+  margin-top: 0;
+}
